[package]
name = "genwallet"
version = "0.6.8"
edition = "2024"

[features]
default = []
# BIP39/BIP32 mnemonic search (`--show-mnemonic`). Pulls bip32 → k256 0.13.
mnemonic = ["dep:bip39", "dep:bip32"]

[dependencies]
# Core cryptography - using k256 for batch optimization
k256 = { version = "0.14", features = ["arithmetic", "std"] }
bip39 = { version = "2.2.2", optional = true }
bip32 = { version = "0.5.3", optional = true }
scrypt = "0.12"
aes = "0.9"
ctr = "0.10"
serde_json = "1.0"

# Random number generation
rand = { version = "0.10", features = ["std", "std_rng"] }

# Utilities
clap = { version = "4.6", features = ["derive"] }
rpassword = "7.5"
sha3 = "0.12"
hex = "0.4"
dirs = "6"
indicatif = "0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false
incremental = false
